[package]
name = "concurrency_traits"
version = "0.1.0"
authors = ["buzzec <buzzec@buzzec.net>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Traits for concurrent primitives."
homepage = "https://github.com/Buzzec/concurrency_traits"
repository = "https://github.com/Buzzec/concurrency_traits"
readme = "README.md"
keywords = ["multithread"]
exclude = [
    ".idea/*"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple_futures = { version = "0.1.1", optional = true }

[features]
default = ["std"]
alloc = ["simple_futures"]
std = ["alloc"]
