[package]
name = "concurrency_traits"
version = "0.7.2"
authors = ["buzzec <buzzec@buzzec.net>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Traits for concurrent primitives."
homepage = "https://github.com/Buzzec/concurrency_traits"
repository = "https://github.com/Buzzec/concurrency_traits"
readme = "README.md"
keywords = ["multithread"]
exclude = [
    ".idea/*"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple_futures = { version = "0.1.2", optional = true, default-features = false, features = ["alloc"] }
parking_lot = { version = "0.11.1", optional = true }
crossbeam = { version = "0.8.0", optional = true, default-features = false }
atomic_swapping = { version = "0.1.0", default-features = false }
async-trait = { version = "0.1.50" }
num = { version = "0.4.0", default-features = false }

[dev-dependencies]
rand = "0.8.3"

[features]
default = ["std", "simple_futures/std"]
alloc = ["simple_futures"]
std = ["alloc"]
nightly = []
impl_parking_lot = ["std", "parking_lot"]
impl_crossbeam = ["alloc", "crossbeam", "crossbeam/alloc"]
